--- a/global.css
+++ b/global.css
@@ -7,3 +7,16 @@ body {
     color: #1f1f1f;
 }
   
+.carousel-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* La hauteur prend tout l'écran */
+    background-color: #f8f9fa; /* Une couleur de fond légère (optionnel) */
+  }
+  
+  .carousel img {
+    margin: auto; /* Assure que les images sont bien centrées dans le carousel */
+    display: block;
+  }
+  
