--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
 
 }
 
+
 .burger {
   display: block;
   cursor: pointer;
@@ -15,7 +16,7 @@
 .line {
   width: 25px;
   height: 3px;
-  background-color: #fff;
+  background-color: #1f1f1f ;
   margin: 5px 0;
   transition: all 0.3s;
 }
@@ -48,6 +49,7 @@
 
   .burger {
     display: none;
+
   }
 
   .nav {
