--- a/src/components/Section-Photo/section-photo.css
+++ b/src/components/Section-Photo/section-photo.css
@@ -16,7 +16,52 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Responsive pour les très petits écrans */
+
+.accordion-container {
+  width: 100%;
+  margin: 0 auto;
+}
+
+
+.accordion-item {
+  overflow: hidden;
+}
+
+
+.accordion-header {
+  padding: 10px 15px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+
+.accordion-header:hover {
+  background-color: #f1f1f1;
+  color: #8f8f8f ;
+}
+
+
+.accordion-body {
+  padding: 10px 15px;
+  transition: max-height 0.3s ease, opacity 0.3s ease;
+}
+.accordion-body .col{
+  padding: 30px;
+}
+
+.accordion-header.active {
+  color: #8f8f8f; 
+}
+
+
+.accordion-body .row {
+  justify-content: center; 
+  margin-bottom: 20px; 
+}
+
+
+
 @media (max-width: 768px) {
   .carousel img {
     max-width: 90%;
