--- a/src/components/Section-Photo/section-photo.css
+++ b/src/components/Section-Photo/section-photo.css
@@ -16,6 +16,10 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.gallery-container .row{
+margin-bottom: 50px;
+}
+
 
 .accordion-container {
   width: 100%;
@@ -26,6 +30,11 @@
 .accordion-item {
   overflow: hidden;
 }
+.accordion-item .link{
+  text-decoration: none;
+  color: #1f1f1f;
+}
+
 
 
 .accordion-header {
@@ -65,7 +74,6 @@
 @media (max-width: 768px) {
   .carousel img {
     max-width: 90%;
-    min-width: 250px;
     max-height: 300px;
   }
 
