--- a/src/components/Section-Photo/section-photo.css
+++ b/src/components/Section-Photo/section-photo.css
@@ -1,19 +1,13 @@
 .carousel-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 100px 200px 200px 200px;
+  margin-top: 70px;
+  width: 100%;
+  max-width: 100vw; 
 }
 
-.carousel img {
-  margin: auto;
-  display: block;
-  height: auto;
-  max-width: 80%;
-  min-width: 500px;
-  object-fit: cover;
-  max-height: 400px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.carousel-item img {
+  width: 100%;
+  height: 500px; 
+  object-fit: cover; 
 }
 
 .gallery-container .row{
@@ -69,15 +63,3 @@ margin-bottom: 50px;
   margin-bottom: 20px; 
 }
 
-
-
-@media (max-width: 768px) {
-  .carousel img {
-    max-width: 90%;
-    max-height: 300px;
-  }
-
-  .carousel-container {
-    padding: 50px;
-  }
-}
