--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -13,26 +13,29 @@
   object-position: center;
 }
 
-.lien {
-  color: #1f1f1f;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  cursor: pointer;
+.link-item {
   width: 100%;
-  max-width: 250px;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  text-decoration: underline;
-  margin: 0 auto;
-  display: block;
+  border-bottom: 1px solid #1f1f1f; 
+
 }
 
-.lien:hover {
-  color: #868686;
-  text-decoration: underline;
+.link-item:first-child {
+  border-top: none; 
 }
+.link-item:hover {
+  border-color: #868686; 
+}
+
+.link-item:hover .link {
+  color: #868686; 
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
+
 
 .centered {
   margin: 0 auto;
