--- a/src/components/Section-Photo/section-photo.css
+++ b/src/components/Section-Photo/section-photo.css
@@ -24,7 +24,7 @@
 
 .link-item {
   width: 100%;
-/*   border-bottom: 1px solid #1f1f1f;  */
+  border-bottom: 1px solid #1f1f1f; 
   padding: 10px 0; 
   margin-bottom: 10px;
 }
