--- a/src/components/Section-Photo/section-photo.css
+++ b/src/components/Section-Photo/section-photo.css
@@ -10,9 +10,15 @@
   object-fit: cover; 
 }
 
+
 .gallery-container .row .col{
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  max-height: 440px;
 }
+
+
+
+
 
 
 .link-container {
