--- a/src/components/Photo-Section/section-photo.css
+++ b/src/components/Photo-Section/section-photo.css
@@ -10,9 +10,6 @@
   text-align: left;
 }
 
-.link {
-  font-size: 1.4rem;
-}
 
 .link-item {
   display: flex;
@@ -28,14 +25,50 @@
   border-top: none;
 }
 
-
-
 .link {
   text-decoration: none;
   color: inherit;
+  font-size: 1.4rem;
 }
 
 .link-content {
+  display: flex;
+  align-items: center;
+}
+
+.link-container1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+}
+
+
+.link-item1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid #1f1f1f;
+  padding: 10px 0;
+  margin-bottom: 10px;
+}
+
+.link-item1:first-child {
+  border-top: none;
+}
+
+.link1 {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.4rem;
+}
+
+.link1:hover{
+  color:#868686 ;
+}
+
+.link1-content {
   display: flex;
   align-items: center;
 }
