--- a/src/components/Photo-Section/section-photo.css
+++ b/src/components/Photo-Section/section-photo.css
@@ -10,11 +10,7 @@
   text-align: left;
 }
 
-
 .link-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
   border-bottom: 1px solid #1f1f1f;
   padding: 10px 0;
@@ -25,15 +21,34 @@
   border-top: none;
 }
 
-.link {
+.link-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   text-decoration: none;
   color: inherit;
+  width: 100%;
+  cursor: pointer;
+}
+
+.link-content:hover {
+  color: #868686;
+}
+
+.link-text {
   font-size: 1.2rem;
 }
 
-.link-content {
-  display: flex;
-  align-items: center;
+.image-container {
+  width: 100px;
+  height: 60px;
+  overflow: hidden;
+}
+
+.link-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .link-container1 {
@@ -42,7 +57,6 @@
   align-items: center;
   text-align: left;
 }
-
 
 .link-item1 {
   display: flex;
@@ -66,18 +80,4 @@
 
 .link1:hover{
   color:#868686 ;
-}
-
-
-
-.image-container {
-  width: 100px; 
-  height: 60px; 
-  overflow: hidden; 
-}
-
-.link-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; 
 }
