--- a/src/components/Photo-Section/section-photo.css
+++ b/src/components/Photo-Section/section-photo.css
@@ -1,18 +1,18 @@
+.link-container {
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-between; 
+  align-items: center;
+  text-align: center;
+  padding: 0 20px; 
+}
+
 .gallery-container .row .col {
   margin-bottom: 30px;
   max-height: 440px;
 }
-
-.link-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: left;
-}
-
 .link-item {
-  width: 100%;
-  border-bottom: 1px solid #1f1f1f;
+  width: 45%; 
   padding: 10px 0;
   margin-bottom: 10px;
 }
@@ -23,8 +23,7 @@
 
 .link-content {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   text-decoration: none;
   color: inherit;
   width: 100%;
@@ -36,26 +35,26 @@
 }
 
 .link-text {
-  font-size: 1.2rem;
+  font-size: 1rem;
+  margin-top: 10px;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .image-container {
-  width: 100px;
-  height: 60px;
+  width: 100%;
+  padding-bottom: 56.25%;
+  position: relative;
   overflow: hidden;
 }
 
 .link-image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.link-container1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: left;
 }
 
 .link-item1 {
