--- a/src/components/Photo-Section/section-photo.css
+++ b/src/components/Photo-Section/section-photo.css
@@ -4,7 +4,7 @@
   justify-content: space-between; 
   align-items: center;
   text-align: center;
-  padding: 0 20px; 
+/*   padding: 0 20px;  */
 }
 
 .gallery-container .row .col {
@@ -36,9 +36,7 @@
 
 .link-text {
   font-size: 1rem;
-  margin-top: 10px;
   text-align: left;
-  margin-bottom: 10px;
 }
 
 .image-container {
@@ -46,6 +44,8 @@
   padding-bottom: 56.25%;
   position: relative;
   overflow: hidden;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .link-image {
@@ -80,3 +80,4 @@
 .link1:hover{
   color:#868686 ;
 }
+
