--- a/src/components/Photo-Section/section-photo.css
+++ b/src/components/Photo-Section/section-photo.css
@@ -4,6 +4,7 @@
   justify-content: space-between; 
   align-items: center;
   text-align: center;
+  flex-wrap: wrap;
 /*   padding: 0 20px;  */
 }
 
