--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -4,7 +4,19 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  justify-content: center; /* Ajouter ceci pour centrer verticalement */
   padding: 20px;
+    min-height: 70vh;
+}
+
+.mainContainer {
+  max-width: 1100px;
+  margin: 0 auto;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .responsiveImage {
