--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -48,6 +48,12 @@ text-decoration: none;
 color: inherit;
 }
 
+@media (max-width: 768px) {
+  .mainContainer {
+    justify-content: flex-start;
+    padding-top: 40px; /* Ajustez cette valeur selon vos besoins */
+  }
+}
 
 
 .centered {
