--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  justify-content: center; /* Ajouter ceci pour centrer verticalement */
+  justify-content: center;
   padding: 20px;
     min-height: 70vh;
 }
@@ -51,7 +51,7 @@ color: inherit;
 @media (max-width: 768px) {
   .mainContainer {
     justify-content: flex-start;
-    padding-top: 40px; /* Ajustez cette valeur selon vos besoins */
+    padding-top: 0px;
   }
 }
 
